# src/main/java/com/finance/tracker/dto/auth/LoginRequest.java
@@ -1,0 +1,19 @@
+package com.finance.tracker.dto.auth;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+/**
+ * DTO for user login request
+ */
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class LoginRequest {
+    
+    private String username;
+    private String password;
+}
